--- a/css/index.css
+++ b/css/index.css
@@ -115,8 +115,9 @@ h2, h1 {
     display: inline-block;
     background: #FFF;
     padding: 2em;
-    width: 33%;
+    width: 32%;
     vertical-align: top;
+    margin: 0;
 }
 
 .subtext {
@@ -130,4 +131,33 @@ h2, h1 {
     padding: .25em .5em;
     background: #5EBABA;
     color: #FFF;
+}
+
+@media only screen and (max-width: 700px) {
+
+    #content-header nav {
+        display: block;
+        float: inherit;
+        margin: auto;
+        padding: 1em 0 0;
+        text-align: right;
+    }
+
+    .major-block.banner {
+        background: #5EBABA;
+        min-height: inherit;
+        padding: 1em 2em;
+    }
+
+        .major-block.banner .block-body {
+            position: relative;
+            width: auto;
+            padding: 0;
+        }
+
+    .minor-block {
+        display: block;
+        width: auto;
+        padding: 1em 2em;
+    }
 }
