--- a/css/index.css
+++ b/css/index.css
@@ -21,11 +21,14 @@ a {
 
 h2, h1 {
     font-weight: normal;
+    line-height: 1.2em;
 }
 
-    h1 sub {
+    h1 .sub {
         display: block;
-        margin-top: .5em;
+        font-size: .5em;
+        line-height: 1.5em;
+        margin-top: -.3em;
         opacity: .8;
     }
 
@@ -37,14 +40,21 @@ h2, h1 {
 }
 
 #content-header .logo {
-    float: left;
+    display: inline-block;
+    vertical-align: middle;
     max-height: 5em;
-    margin: .4em 1em 0 0;
+    margin: 0 1em 0 0;
+}
+
+#content-header h1 {
+    display: inline-block;
+    vertical-align: bottom;
+    margin: 0 0 .5em;
 }
 
 #content-header nav {
     float: right;
-    margin-top: -1.5em;
+    margin-top: 2.5em;
 }
 
     #content-header nav a {
@@ -59,7 +69,6 @@ h2, h1 {
 
 #page-content {
     max-width: 1200px;
-    min-width: 400px;
     margin: auto;
     background: #FFF;
     border: 3px solid #EEE;
