--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,7 @@ h2, h1 {
 
         #content-header .sub {
             margin-top: 0;
+            font-size: .45em;
         }
 
     #content-header nav {
